feat : updated practice question

--- a/Mathematics/1. Basic Mathematics/1-011. Sequence/1-11 연습문제.ipynb
+++ b/Mathematics/1. Basic Mathematics/1-011. Sequence/1-11 연습문제.ipynb
@@ -19,6 +19,7 @@
    "id": "ba0bf5d4-52ed-4435-abbb-a407f67af981",
    "metadata": {},
    "source": [
+    "# My Answer\n",
     "1. $2n-1$\n",
     "2. $-70$\n",
     "3. $3^{n}$\n",
@@ -30,14 +31,6 @@
     "   $=$ $\\frac{2}{3}n^3 + n^2 + \\frac{1}{2}n^2 + \\frac{1}{3}n + \\frac{1}{2}n + n$ <br>\n",
     "   $=$ $\\frac{2}{3}n^3 + \\frac{3}{2}n^2 + \\frac{11}{6}n$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fd057dc-6e30-4f6d-922f-af0f816d48e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
